# zebes

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  README.md  build_log.txt  build_log_2.txt  check_test.cc  ellie  imgui.ini  test_output.txt
scripts/: CMakeLists.txt  build_and_test.sh  build_cleaner.py  converter.cc  resize_image.cc  run_editor.sh
src/: CMakeLists.txt  main.cc
src/api/: CMakeLists.txt  api.cc  api.h
src/common/: CMakeLists.txt  common.h  config.cc  config.h  imgui_wrapper.cc  imgui_wrapper.h  logging.cc  logging.h  mock_imgui_wrapper.h  sdl_wrapper.cc  sdl_wrapper.h  status_macros.h  utils.h  vector.h
src/db/: CMakeLists.txt  db.cc  db.h  db_interface.h  migration_manager.cc  migration_manager.h  sqlite_wrapper.cc  sqlite_wrapper.h
src/editor/: CMakeLists.txt  animator.cc  animator.h  asset_catalog.h  blueprint_editor.cc  blueprint_editor.h  blueprint_panel.cc  blueprint_panel.h  blueprint_state_panel.cc  blueprint_state_panel.h  canvas.cc  canvas.h  canvas_collider.cc  canvas_collider.h  canvas_sprite.cc  canvas_sprite.h  collider_panel.cc  collider_panel.h  config_editor.cc  config_editor.h  editor_engine.cc  editor_engine.h  editor_ui.cc  editor_ui.h  editor_utils.cc  editor_utils.h  gui.cc  gui.h  gui_interface.h  imgui_scoped.cc  imgui_scoped.h  main.cc  sdl_wrapper.cc  sdl_wrapper.h  sprite_editor.cc  sprite_editor.h  sprite_panel.cc  sprite_panel.h  texture_editor.cc  texture_preview.cc  (+1 more)
src/editor/blueprint/: CMakeLists.txt  blueprint_editor.cc  blueprint_editor.h  blueprint_panel.cc  blueprint_panel.h  blueprint_state_panel.cc  blueprint_state_panel.h  collider_panel.cc  collider_panel.h  sprite_panel.cc  sprite_panel.h
src/editor/blueprint_editor/: CMakeLists.txt  blueprint_editor.cc  blueprint_editor.h  blueprint_panel.cc  blueprint_panel.h  blueprint_panel_model.cc  blueprint_panel_model.h  blueprint_state_panel.cc  blueprint_state_panel.h  collider_panel.cc  collider_panel.h  collider_panel_model.cc  collider_panel_model.h  sprite_panel.cc  sprite_panel.h  sprite_panel_model.cc  sprite_panel_model.h
src/editor/canvas/: canvas.cc  canvas.h  canvas_collider.cc  canvas_collider.h  canvas_sprite.cc  canvas_sprite.h  tile_draw.h
src/editor/config_editor/: config_editor.cc  config_editor.h
src/editor/level_editor/: CMakeLists.txt  blueprint_palette_panel.cc  blueprint_palette_panel.h  camera_guide.cc  camera_guide.h  level_editor.cc  level_editor.h  level_panel.cc  level_panel.h  level_panel_interface.h  level_panel_model.cc  level_panel_model.h  level_selection_state.h  palette_panel.cc  palette_panel.h  parallax_layout.cc  parallax_layout.h  parallax_panel.cc  parallax_panel.h  (+16 more)
src/engine/: CMakeLists.txt  bitmap.h  camera.cc  camera.h  camera_controller.cc  camera_controller.h  camera_interface.h  collision_manager.cc  collision_manager.h  config.cc  config.h  controller.cc  controller.h  creator.cc  creator.h  creator_api.cc  creator_api.h  db.cc  db.h  db_interface.h  focus.h  focus_lite.cc  focus_lite.h  game.cc  game.h  hud.cc  hud.h  input_manager.cc  input_manager.h  input_manager_interface.h  input_types.h  logging.cc  logging.h  main.cc  map.cc  map.h  mobile_object.cc  mobile_object.h  object.cc  object.h  (+26 more)
src/hud/: CMakeLists.txt  boundary_config.cc  boundary_config.h  collision_config.cc  collision_config.h  hud.cc  hud.h  sprite_creator.cc  sprite_creator.h  terminal.cc  terminal.h  texture_creator.cc  texture_creator.h  tile_config.cc  tile_config.h  utils.cc  utils.h  window_config.cc  window_config.h
src/objects/: CMakeLists.txt  blueprint.h  body.h  camera.h  collider.h  entity.h  game_view.h  level.h  mobile_object.cc  mobile_object.h  object.cc  object.h  object_interface.h  polygon.cc  polygon.h  sprite.cc  sprite.h  sprite_interface.h  sprite_object.cc  sprite_object.h  texture.h  tileset.h  transform.h  vec.h
src/old/: old_hud.cc  old_hud.h  player.cc  player.h  zebes.db
src/resources/: CMakeLists.txt  blueprint_manager.cc  blueprint_manager.h  collider_manager.cc  collider_manager.h  level_manager.cc  level_manager.h  resource_utils.cc  resource_utils.h  sprite_manager.cc  sprite_manager.h  texture_manager.cc  texture_manager.h  texture_resource_store.h  tileset_manager.cc  tileset_manager.h
tests/: CMakeLists.txt  api_mock.h  api_validation_test.cc  blueprint_manager_test.cc  bmp_test.cc  build_cleaner_test.py  camera_mock.h  collider_manager_mock.h  collider_manager_test.cc  common_config_test.cc  config_test.cc  creator_api_test.cc  creator_test.cc  db_test.cc  input_manager_test.cc  level_manager_test.cc  level_test.cc  macros.h  sprite_manager_test.cc  texture_manager_mock.h  texture_manager_test.cc
tests/common/: mock_input_manager.h  mock_sdl_wrapper.h
tests/editor/: CMakeLists.txt  animator_test.cc  blueprint_editor_test.cc  blueprint_palette_panel_test.cc  blueprint_panel_model_test.cc  camera_guide_test.cc  canvas_test.cc  collider_panel_model_test.cc  imgui_testing_guide.md  level_editor_test.cc  level_panel_model_test.cc  level_panel_test.cc  level_panel_validation_test.cc  mock_gui.h  mock_gui_test.cc  mock_level_panel.h  mock_parallax_panel.h  parallax_layout_test.cc  parallax_panel_test.cc  parallax_panel_validation_test.cc  parallax_theme_panel_test.cc  parallax_zone_panel_test.cc  sanity_test.cc  sprite_editor_model_test.cc  sprite_panel_model_test.cc  sprite_panel_test.cc  test_main.cc  test_main.h  texture_editor_model_test.cc  texture_preview_test.cc  tile_palette_panel_test.cc  tileset_editor_model_test.cc  viewport_scene_test.cc  viewport_tab_test.cc
tests/engine/: camera_controller_test.cc
tests/platform/: sdl_input_source_test.cc  sdl_texture_store_test.cc
tests/resources/: blueprint_manager_mock.h  blueprint_manager_test.cc  fake_texture_resource_store.h  level_manager_mock.h  level_manager_test.cc  sprite_manager_mock.h  sprite_manager_test.cc  texture_manager_test.cc  tileset_manager_mock.h  tileset_manager_test.cc
tests/tools/: CMakeLists.txt  panel_scenarios.h  panel_viewer.cc
(+1105 files in other folders)
