add_subdirectory(api)
add_subdirectory(common)
add_subdirectory(db)
add_subdirectory(objects)
add_subdirectory(engine)
add_subdirectory(editor)

add_executable(${PROJECT_NAME} main.cc)
target_link_libraries(${PROJECT_NAME} absl::base)
target_link_libraries(${PROJECT_NAME} absl::flags)
target_link_libraries(${PROJECT_NAME} absl::flags_parse)
target_link_libraries(${PROJECT_NAME} absl::log)
target_link_libraries(${PROJECT_NAME} absl::log_initialize)
target_link_libraries(${PROJECT_NAME} absl::status)
target_link_libraries(${PROJECT_NAME} absl::strings)
target_link_libraries(${PROJECT_NAME} absl::str_format)
target_link_libraries(${PROJECT_NAME} SDL2main SDL2-static SDL2_image SDL2_ttf)
target_link_libraries(${PROJECT_NAME} ${IMGUI_LIBRARIES})
target_link_libraries(${PROJECT_NAME} ${SQLITE3_LIBRARIES})
target_link_libraries(${PROJECT_NAME} nlohmann_json::nlohmann_json)

target_link_libraries(${PROJECT_NAME} api)
target_link_libraries(${PROJECT_NAME} logging)
target_link_libraries(${PROJECT_NAME} vector)
target_link_libraries(${PROJECT_NAME} polygon)
target_link_libraries(${PROJECT_NAME} config)
target_link_libraries(${PROJECT_NAME} sprite)
target_link_libraries(${PROJECT_NAME} camera)
target_link_libraries(${PROJECT_NAME} object)
target_link_libraries(${PROJECT_NAME} sprite_manager)
target_link_libraries(${PROJECT_NAME} collision_manager)
target_link_libraries(${PROJECT_NAME} controller)
target_link_libraries(${PROJECT_NAME} engine)