cmake_policy(SET CMP0079 NEW)

add_library(macros INTERFACE macros.h)
target_link_libraries(macros INTERFACE absl::statusor)

add_executable(texture_manager_test texture_manager_test.cc)
target_link_libraries(texture_manager_test texture_manager)
target_link_libraries(texture_manager_test macros)
target_link_libraries(texture_manager_test gtest_main)

add_executable(sprite_manager_test sprite_manager_test.cc)
target_link_libraries(sprite_manager_test sprite_manager)
target_link_libraries(sprite_manager_test texture_manager)
target_link_libraries(sprite_manager_test macros)
target_link_libraries(sprite_manager_test gtest_main)

add_executable(collider_manager_test collider_manager_test.cc)
target_link_libraries(collider_manager_test collider_manager)
target_link_libraries(collider_manager_test macros)
target_link_libraries(collider_manager_test gtest_main)

add_executable(blueprint_manager_test blueprint_manager_test.cc)
target_link_libraries(blueprint_manager_test blueprint_manager)
target_link_libraries(blueprint_manager_test macros)
target_link_libraries(blueprint_manager_test gtest_main)

add_executable(api_validation_test api_validation_test.cc)
target_link_libraries(api_validation_test api)
target_link_libraries(api_validation_test macros)
target_link_libraries(api_validation_test gtest_main)
target_link_libraries(api_validation_test gmock)
target_link_libraries(api_validation_test absl::flags)
target_link_libraries(api_validation_test absl::flags_parse)
