add_library(db_interface INTERFACE db_interface.h)
target_link_libraries(db_interface INTERFACE absl::status)
target_link_libraries(db_interface INTERFACE absl::statusor)
target_link_libraries(db_interface INTERFACE sprite_interface)
target_link_libraries(db_interface INTERFACE status_macros)

add_library(db db.cc migration_manager.cc sqlite_wrapper.cc)
target_link_libraries(db absl::strings)
target_link_libraries(db absl::status)
target_link_libraries(db absl::statusor)
target_link_libraries(db absl::log)
target_link_libraries(db absl::cleanup)
target_link_libraries(db ${SQLITE3_LIBRARIES})
target_link_libraries(db status_macros)
target_link_libraries(db sprite_interface)
target_link_libraries(db db_interface)