add_library(utils utils.cc)
target_link_libraries(utils ${IMGUI_LIBRARIES})

add_library(hud_boundary_config boundary_config.cc)
target_link_libraries(hud_boundary_config config)
target_link_libraries(hud_boundary_config absl::status)
target_link_libraries(hud_boundary_config ${IMGUI_LIBRARIES})

add_library(hud_collision_config collision_config.cc)
target_link_libraries(hud_collision_config config)
target_link_libraries(hud_collision_config absl::status)
target_link_libraries(hud_collision_config ${IMGUI_LIBRARIES})

add_library(hud_tile_config tile_config.cc)
target_link_libraries(hud_tile_config config)
target_link_libraries(hud_tile_config absl::status)
target_link_libraries(hud_tile_config ${IMGUI_LIBRARIES})

add_library(hud_window_config window_config.cc)
target_link_libraries(hud_window_config config)
target_link_libraries(hud_window_config absl::status)
target_link_libraries(hud_window_config ${IMGUI_LIBRARIES})

add_library(hud_terminal terminal.cc)
target_link_libraries(hud_terminal logging)
target_link_libraries(hud_terminal ${IMGUI_LIBRARIES})

add_library(hud_texture_creator texture_creator.cc)
target_link_libraries(hud_texture_creator utils)
target_link_libraries(hud_texture_creator api)
target_link_libraries(hud_texture_creator sprite_manager)
target_link_libraries(hud_texture_creator absl::log)
target_link_libraries(hud_texture_creator absl::status)
target_link_libraries(hud_texture_creator absl::statusor)
target_link_libraries(hud_texture_creator ${IMGUI_LIBRARIES})

add_library(hud_sprite_creator sprite_creator.cc)
target_link_libraries(hud_sprite_creator hud_texture_creator)
target_link_libraries(hud_sprite_creator status_macros)
target_link_libraries(hud_sprite_creator sprite_manager)
target_link_libraries(hud_sprite_creator absl::log)
target_link_libraries(hud_sprite_creator absl::status)
target_link_libraries(hud_sprite_creator absl::statusor)
target_link_libraries(hud_sprite_creator ${IMGUI_LIBRARIES})

add_library(hud hud.cc)
target_link_libraries(hud hud_boundary_config)
target_link_libraries(hud hud_collision_config)
target_link_libraries(hud hud_tile_config)
target_link_libraries(hud hud_window_config)
target_link_libraries(hud hud_terminal)
target_link_libraries(hud hud_sprite_creator)
target_link_libraries(hud hud_texture_creator)
target_link_libraries(hud api)
target_link_libraries(hud sprite_manager)
target_link_libraries(hud status_macros)
target_link_libraries(hud absl::log)
target_link_libraries(hud absl::status)
target_link_libraries(hud absl::statusor)
target_link_libraries(hud ${IMGUI_LIBRARIES})