add_library(polygon polygon.cc)
target_link_libraries(polygon vector)

add_library(object_interface INTERFACE object_interface.h)
target_link_libraries(object_interface INTERFACE polygon)
target_link_libraries(object_interface INTERFACE vector)


add_library(object object.cc)
target_link_libraries(object sprite_interface)
target_link_libraries(object polygon)
target_link_libraries(object vector)
target_link_libraries(object common)
target_link_libraries(object absl::flat_hash_set)
target_link_libraries(object absl::strings)
target_link_libraries(object absl::status)
target_link_libraries(object SDL2-static SDL2_image SDL2_ttf)

add_library(sprite_interface INTERFACE sprite_interface.h)
target_link_libraries(sprite_interface INTERFACE SDL2-static SDL2_image SDL2_ttf)

add_library(sprite sprite.cc)
target_link_libraries(sprite sprite_interface)
target_link_libraries(sprite absl::strings)
target_link_libraries(sprite absl::status)
target_link_libraries(sprite SDL2-static SDL2_image SDL2_ttf)

add_library(sprite_object sprite_object.cc)
target_link_libraries(sprite_object object)
target_link_libraries(sprite_object sprite_interface)
target_link_libraries(sprite_object vector)
target_link_libraries(sprite_object absl::flat_hash_set)
target_link_libraries(sprite_object absl::strings)
target_link_libraries(sprite_object absl::status)
target_link_libraries(sprite_object SDL2-static SDL2_image SDL2_ttf)

add_library(mobile_object mobile_object.cc)
target_link_libraries(mobile_object object)
target_link_libraries(mobile_object polygon)
target_link_libraries(mobile_object sprite_interface)
target_link_libraries(mobile_object sprite_object)
target_link_libraries(mobile_object vector)
target_link_libraries(mobile_object absl::flat_hash_set)
target_link_libraries(mobile_object absl::strings)
target_link_libraries(mobile_object absl::status)
target_link_libraries(mobile_object SDL2-static SDL2_image SDL2_ttf)