add_library(texture_manager texture_manager.cc)
target_link_libraries(texture_manager common)
target_link_libraries(texture_manager absl::status)
target_link_libraries(texture_manager absl::statusor)
target_link_libraries(texture_manager absl::flat_hash_map)
target_link_libraries(texture_manager SDL2-static)
target_link_libraries(texture_manager sdl_wrapper)
target_link_libraries(texture_manager texture)

add_library(sprite_manager sprite_manager.cc)
target_link_libraries(sprite_manager common)
target_link_libraries(sprite_manager sprite)
target_link_libraries(sprite_manager texture_manager)
target_link_libraries(sprite_manager absl::status)
target_link_libraries(sprite_manager absl::statusor)
target_link_libraries(sprite_manager absl::flat_hash_map)
target_link_libraries(sprite_manager SDL2-static)

add_library(collider_manager collider_manager.cc)
target_link_libraries(collider_manager common)
target_link_libraries(collider_manager absl::status)
target_link_libraries(collider_manager absl::statusor)
target_link_libraries(collider_manager absl::flat_hash_map)

add_library(blueprint_manager blueprint_manager.cc)
target_link_libraries(blueprint_manager common)
target_link_libraries(blueprint_manager absl::status)
target_link_libraries(blueprint_manager absl::statusor)
target_link_libraries(blueprint_manager absl::flat_hash_map)
target_link_libraries(blueprint_manager blueprint)
