add_library(resource_utils resource_utils.cc)
target_link_libraries(resource_utils absl::strings)

add_library(texture_manager texture_manager.cc)
target_link_libraries(texture_manager common)
target_link_libraries(texture_manager absl::status)
target_link_libraries(texture_manager absl::statusor)
target_link_libraries(texture_manager absl::flat_hash_map)
target_link_libraries(texture_manager SDL2-static)
target_link_libraries(texture_manager sdl_wrapper)
target_link_libraries(texture_manager texture)
target_link_libraries(texture_manager resource_utils)

add_library(sprite_manager sprite_manager.cc)
target_link_libraries(sprite_manager common)
target_link_libraries(sprite_manager sprite)
target_link_libraries(sprite_manager texture_manager)
target_link_libraries(sprite_manager absl::status)
target_link_libraries(sprite_manager absl::statusor)
target_link_libraries(sprite_manager absl::flat_hash_map)
target_link_libraries(sprite_manager SDL2-static)
target_link_libraries(sprite_manager resource_utils)

add_library(collider_manager collider_manager.cc)
target_link_libraries(collider_manager common)
target_link_libraries(collider_manager absl::status)
target_link_libraries(collider_manager absl::statusor)
target_link_libraries(collider_manager absl::flat_hash_map)
target_link_libraries(collider_manager resource_utils)

add_library(blueprint_manager blueprint_manager.cc)
target_link_libraries(blueprint_manager common)
target_link_libraries(blueprint_manager absl::status)
target_link_libraries(blueprint_manager absl::statusor)
target_link_libraries(blueprint_manager absl::flat_hash_map)
target_link_libraries(blueprint_manager blueprint)
target_link_libraries(blueprint_manager resource_utils)

add_library(level_manager level_manager.cc)
target_link_libraries(level_manager common)
target_link_libraries(level_manager absl::status)
target_link_libraries(level_manager absl::statusor)
target_link_libraries(level_manager absl::flat_hash_map)
target_link_libraries(level_manager level)
target_link_libraries(level_manager sprite_manager)
target_link_libraries(level_manager collider_manager)
target_link_libraries(level_manager resource_utils)
